# navigation-application

./: .gitignore  LICENSE  README  README.md
api/franca/: CMakeLists.txt  FuelStopAdvisor.fidl
api/franca/amb/: CMakeLists.txt  Manager.fidl  Properties.fidl
api/franca/fsa/: CMakeLists.txt  FuelStopAdvisor.fidl
src/: .gitignore  CMakeLists.txt  README  README.md  build.sh  clone_and_build.sh  commonapi-dbus.ini  generate_translation_report.sh  kill-all  rebuild_all.sh  reload.sh  run  run-capi  set_window_location  step  step1  step2  step3  step4  step5  step6  step7  stop  update_hmi.sh  update_navit.sh  update_positioning.sh  update_third_party.sh  update_translation.sh
src/dead-reckoning/: CMakeLists.txt  enhanced-position.cpp
src/fuel-stop-advisor/: CMakeLists.txt  constants.xml  ctripcomputer.cpp  ctripcomputer.h  ctripcomputertypes.h  fuel-stop-advisor.cpp  fuel-stop-advisor.xml  fuel_stop_advisor.service
src/fuel-stop-advisor-capi/: CMakeLists.txt  fuel-stop-advisor.cpp
src/genivilogreplayer/: CMakeLists.txt  genivilogreplayerplugin.cpp  genivilogreplayerplugin.h  logreplayerconfig  logreplayerconfig.in.json
src/gnss-service/: CMakeLists.txt  gnss-use-replayer.c
src/hmi/: CMakeLists.txt
src/hmi/config/: fsa_giromagny.conf  fsa_london.conf  fsa_paris.conf  fsa_seoul.conf  fsa_switzerland.conf  fsa_tokyo.conf
src/hmi/gimp/: README.md  generate-style-sheet.py
src/hmi/gimp/gdp-theme/: LICENSE
src/hmi/gimp/gdp-theme/800x480/: NavigationAppBrowseMap.xcf  NavigationAppBrowseMapBottom.xcf  NavigationAppBrowseMapCompass.xcf  NavigationAppBrowseMapGuidance.xcf  NavigationAppBrowseMapManeuver.xcf  NavigationAppBrowseMapRoute.xcf  NavigationAppBrowseMapScroll.xcf  NavigationAppBrowseMapSettings.xcf  NavigationAppBrowseMapSimulation.xcf  NavigationAppBrowseMapTop.xcf  NavigationAppBrowseMapZoom.xcf  NavigationAppMain.xcf  NavigationAppMap.xcf  NavigationAppPOI.xcf  NavigationAppSearch.xcf  NavigationAppSettings.xcf  button-keyboard.xcf
src/hmi/hmi-launcher/: CMakeLists.txt  dbusif.cpp  dltif.cpp  dltif.h  hmi-launcher_fsa.service  lm_control.h  main.cpp  preference.cpp  settings.h  translator.h  wheelareaplugin.h  wheelareaplugin.json
src/hmi/html/: CMakeLists.txt  test.html
src/hmi/html/js/: loader.js  resource.js  resource.js.in
src/hmi/html/plugins/: NavigationCoreConfiguration.cpp  NavigationCoreConfiguration.h
src/hmi/html/style-sheets/: stylesheet.css
src/hmi/html/webidl/: NavigationCoreConfiguration.idl
src/hmi/images/: README
src/hmi/qml/: CameraSettings.qml  Entry.qml  EntryFreeText.qml  EntrySimple.qml  FSA.qmlproject  MainMenu.qml  Navigation.qml  NavigationApp.qml  NavigationAppBrowseMap.qml  NavigationAppBrowseMapSettings.qml  NavigationAppEntry.qml  NavigationAppMain.qml  NavigationAppMap.qml  NavigationAppPOI.qml  NavigationAppSearch.qml  NavigationAppSettings.qml  NavigationAppSettingsLanguageAndUnits.qml  NavigationAppSettingsPreferences.qml  NavigationAppTokyo.qml  NavigationAppTripComputer.qml  NavigationBrowseMap.qml  NavigationCalculatedRoute.qml  NavigationManeuversList.qml  NavigationRoute.qml  NavigationRouteDescription.qml  NavigationRoutePreferences.qml  NavigationSearch.qml  NavigationSearchAddress.qml  NavigationSearchCoordinates.qml  NavigationSearchFreeText.qml  NavigationSearchHistory.qml  NavigationSettings.qml  NavigationSettingsLanguageAndUnits.qml  NavigationSettingsPreferences.qml  POI.qml  TripComputer.qml  all.pro  application.qml  dbus.pro  navigation.qmlproject  (+1 more)
src/hmi/qml/Core/: .gitignore  Button.qml  EntryField.qml  HMIBgImage.qml  HMIGrid.qml  HMIList.qml  HMIMenu.qml  KButton.qml  Keyboard.qml  NavigationAppEntryField.qml  NavigationAppHMIBgImage.qml  NavigationAppHMIList.qml  NavigationAppHMIMenu.qml  NavigationAppKeyboard.qml  SmartText.qml  StdButton.qml  genivi-capi.js  genivi-origin.js  genivi.js  qmldir  resource.js  resource.js.in
src/hmi/qml/Core/gimp/: README  README.md  fsa-main-menu.xcf  fsa-poi-menu.xcf  generate-style-sheet.py  generate-style-sheet.scm  navigation-calculated-route-menu.xcf  navigation-route-menu.xcf  navigation-search-address-menu.xcf  navigation-search-coordinates-menu.xcf  navigation-search-menu.xcf  navigation-settings-menu.xcf
src/hmi/qml/Core/images/: LICENSE  README  fsa-main-menu-css.js  fsa-main-menu.xcf  fsa-poi-menu.xcf  navigation-search-freetext-menu.xcf  navigation-search-menu.xcf
src/hmi/qml/Core/style-sheets/: .gitignore  button-keyboard-css.js  fsa-main-menu-css.js  fsa-main-menu-css.xml  fsa-poi-menu-css.js  (+19 more)
src/hmi/qml/hmi-launcher/: CMakeLists.txt  dbusif.cpp  dbusif.h  dbusifsignal.h  hmi-launcher.pro  hmi-launcher_fsa.service  javascript.xsl  lm_control.cpp  main.cpp  preference.h  wheelarea.h  wheelareaplugin.cpp
src/hmi/qml/plugin/: dbusif.cpp  dbusif.h  dbusifsignal.h  dbusplugin.cpp  dbusplugin.h  dbusplugin.json  wheelarea.h  wheelareaplugin.cpp  wheelareaplugin.h  wheelareaplugin.json
src/hmi/translations/: deu_DEU.js  deu_DEU_Latn.ts  eng_USA.js  eng_USA_Latn.ts  fra_FRA.js  fra_FRA_Latn.ts  jpn_JPN.js  jpn_JPN_Hrkt.ts  kor_KOR_Hang.ts  translating-qml.pro
src/log-replayer/: CMakeLists.txt  log-replayer.c  log.h
src/log-replayer-server/: CMakeLists.txt  log-replayer-server.cpp
src/log-replayer/src/: CMakeLists.txt  log-replayer.c  log.h
src/patches/: amb_allow_sessionbus.patch  layer_management_cast_fix.patch
src/script/: 0positioning.mk  Makefile  automotive-message-broker.mk  build.sh  empty.db  fsa-config.sh  fuel-stop-advisor.mk  genivilogreplayer.mk  get-apt-packets.sh  hmi.mk  kill-all  layer_management.mk  log-replayer.mk  navigation-service.mk  prepare.sh  run  style_sheet_generator.sh  tripcomputer.mk  z_fuel-stop-advisor.mk  z_hmi.mk  z_tripcomputer.mk
src/sensors-service/: CMakeLists.txt  sns-use-replayer.c
src/tripcomputer/: CMakeLists.txt  amb.xml  constants.xml  ctripcomputer.cpp  ctripcomputer.h  ctripcomputertypes.h  enum.xsl  tripcomputer.cpp  tripcomputer.xml
src/vehicle-gateway/: CMakeLists.txt  can.h  common.cpp  common.h  gnss.cpp  gnss.h  hnmea.cpp  obd2.cpp  obd2.h  veh-gateway.cpp
(+183 files in other folders)
